--- a/index.html
+++ b/index.html
@@ -2,8 +2,12 @@
 <html>
   <head>
     <title>Portfolio of Mohtasim Tamjeed</title>
-    <script type="text/javascript" src="/index.js"></script>
+    <link rel="stylesheet" type="text/css" src="/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" src="/animate.min.css">
     <link rel="stylesheet" type="text/css" src="/index.css">
+    <script type="text/javascript" src="/jquery.min.js"></script>
+    <script type="text/javascript" src="/bootstrap.min.js"></script>
+    <script type="text/javascript" src="/index.js"></script>
   </head>
   <body>
     <div class="container">
