--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html>
   <head>
     <title>Portfolio of Mohtasim Tamjeed</title>
-    <script type="text/javascript" src="js/jquery.min.js"></script>
-    <script type="text/javascript" src="js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="js/index.js"></script>
-    <link rel="stylesheet" type="text/css" src="css/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" src="css/animate.min.css">
-    <link rel="stylesheet" type="text/css" src="css/index.css">
+    <script type="text/javascript" src="/js/jquery.min.js"></script>
+    <script type="text/javascript" src="/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="/js/index.js"></script>
+    <link rel="stylesheet" type="text/css" src="/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" src="/css/animate.min.css">
+    <link rel="stylesheet" type="text/css" src="/css/index.css">
 
   </head>
   <body>
