Bootstrap and jquery edit 3

--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
   <head>
     <title>Portfolio of Mohtasim Tamjeed</title>
 
-    <link rel="stylesheet" type="text/css" src="/css/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" src="/css/animate.min.css">
-    <link rel="stylesheet" type="text/css" src="/css/index.css">
+    <link rel="stylesheet" type="text/css" href="/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="/css/animate.min.css">
+    <link rel="stylesheet" type="text/css" href="/css/index.css">
 
   </head>
   <body>
