added new project demo files

--- a/index.html
+++ b/index.html
@@ -15,19 +15,19 @@
           <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
             <div class="col-md-12">
               <div class="navbar-header" id="n1">
-                <a class="navbar-brand" href="http://CrazyOnion.com">CrazyOnion</a>
+                <a class="navbar-brand" href="#">CrazyOnion</a>
               </div>
               <ul class="nav navbar-nav navbar-right">
-                <li id="n1">
+                <li id="n2">
                   <a href="#padding">Home</a>
                 </li>
-                <li id="n1">
+                <li id="n3">
                   <a href="#portfolio">Portfolio</a>
                 </li>
-                <li id="n1">
+                <li id="n4">
                   <a href="#aboutus">About Us</a>
                 </li>
-                <li id="n1">
+                <li id="n5">
                   <a href="#contactus">Contact Us</a>
                 </li>
               </ul>
@@ -63,9 +63,37 @@
       <!-- Wrapper for slides -->
       <div class="carousel-inner jumbotron" role="listbox">
        <div class="item active container">
-         <img class='portfolioimg img-responsive' src="https://scontent.cdninstagram.com/hphotos-xpa1/t51.2885-15/s480x480/e35/12120230_1660914670849910_809073269_n.jpg" alt="Project 1">
+         <a href="/projects/simon.html">
+           <img class='portfolioimg img-responsive' src="/imgs/simon.png" alt="Simon Game Clone">
+           <div class="carousel-caption">
+             <h3>Simon Game Clone</h3>
+             <p>Built with HTML, CSS and Javascript</p>
+           </div>
+        </a>
+       </div>
+
+       <div class="item container">
+         <a href="/projects/js-calculator.html">
+           <img class='portfolioimg img-responsive' src="/imgs/js-calculator.png" alt="Javascript Calculator">
+           <div class="carousel-caption">
+             <h3>Javascript Calculator</h3>
+             <p>Built with HTML, CSS and Javascript</p>
+           </div>
+         </a>
+       </div>
+
+       <div class="item container">
+         <img class='portfolioimg img-responsive' src="https://scontent.cdninstagram.com/hphotos-xpf1/t51.2885-15/s480x480/e35/10899184_1094440900627191_1417572849_n.jpg" alt="Project 2">
          <div class="carousel-caption">
-           <h3>Cat 1</h3>
+           <h3>Cat 2</h3>
+           <p>The atmosphere in Chania has a touch of Florence and Venice.</p>
+         </div>
+       </div>
+
+       <div class="item container">
+         <img class='portfolioimg img-responsive' src="https://scontent.cdninstagram.com/hphotos-xpf1/t51.2885-15/s480x480/e35/10899184_1094440900627191_1417572849_n.jpg" alt="Project 2">
+         <div class="carousel-caption">
+           <h3>Cat 2</h3>
            <p>The atmosphere in Chania has a touch of Florence and Venice.</p>
          </div>
        </div>
@@ -83,6 +111,22 @@
          <div class="carousel-caption">
            <h3>Cat 3</h3>
            <p>Beatiful flowers in Kolymbari, Crete.</p>
+         </div>
+       </div>
+
+       <div class="item container">
+         <img class='portfolioimg img-responsive' src="https://scontent.cdninstagram.com/hphotos-xpf1/t51.2885-15/s480x480/e35/10899184_1094440900627191_1417572849_n.jpg" alt="Project 2">
+         <div class="carousel-caption">
+           <h3>Cat 2</h3>
+           <p>The atmosphere in Chania has a touch of Florence and Venice.</p>
+         </div>
+       </div>
+
+       <div class="item container">
+         <img class='portfolioimg img-responsive' src="https://scontent.cdninstagram.com/hphotos-xpf1/t51.2885-15/s480x480/e35/10899184_1094440900627191_1417572849_n.jpg" alt="Project 2">
+         <div class="carousel-caption">
+           <h3>Cat 2</h3>
+           <p>The atmosphere in Chania has a touch of Florence and Venice.</p>
          </div>
        </div>
 
