img src issue fix 1

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
       <div class="carousel-inner jumbotron" role="listbox">
        <div class="item active container">
          <a href="/projects/simon.html">
-           <img class='portfolioimg img-responsive' src="/imgs/simon.png" alt="Simon Game Clone">
+           <img class='portfolioimg img-responsive' src="/imgs/simon-game.PNG" alt="Simon Game Clone">
            <div class="carousel-caption">
              <h3>Simon Game Clone</h3>
              <p>Built with HTML, CSS and Javascript</p>
@@ -74,7 +74,7 @@
 
        <div class="item container">
          <a href="/projects/js-calculator.html">
-           <img class='portfolioimg img-responsive' src="/imgs/js-calculator.png" alt="Javascript Calculator">
+           <img class='portfolioimg img-responsive' src="/imgs/js-calculator.PNG" alt="Javascript Calculator">
            <div class="carousel-caption">
              <h3>Javascript Calculator</h3>
              <p>Built with HTML, CSS and Javascript</p>
