--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 ﻿<!DOCTYPE html>
 <html>
   <head>
+    <meta charset="utf-8">
     <title>Portfolio of Mohtasim Tamjeed</title>
 
     <link rel="stylesheet" type="text/css" href="/css/bootstrap.min.css">
@@ -83,10 +84,10 @@
        </div>
 
        <div class="item container">
-         <img class='portfolioimg img-responsive' src="https://scontent.cdninstagram.com/hphotos-xpf1/t51.2885-15/s480x480/e35/10899184_1094440900627191_1417572849_n.jpg" alt="Project 2">
+         <img class='portfolioimg img-responsive' src="/imgs/pomodoro.PNG" alt="Pomodoro Clock">
          <div class="carousel-caption">
-           <h3>Cat 2</h3>
-           <p>The atmosphere in Chania has a touch of Florence and Venice.</p>
+           <h3>Pomodoro Clock</h3>
+           <p>Built with HTML, CSS, Bootstrap and Javascript</p>
          </div>
        </div>
 
