--- a/projects/js-calculator.html
+++ b/projects/js-calculator.html
@@ -2,6 +2,7 @@
 <html>
 
   <head>
+    <meta charset="utf-8">
     <title>Basic Calculator</title>
     <link rel="stylesheet" href="/css/bootstrap.min.css">
     <link rel="stylesheet" href="/css/js-calculator.css">
