added weather project and glyphicon fixes

--- a/index.html
+++ b/index.html
@@ -84,19 +84,23 @@
        </div>
 
        <div class="item container">
-         <img class='portfolioimg img-responsive' src="/imgs/pomodoro.PNG" alt="Pomodoro Clock">
-         <div class="carousel-caption">
-           <h3>Pomodoro Clock</h3>
-           <p>Built with HTML, CSS, Bootstrap and Javascript</p>
-         </div>
+         <a href="/projects/pomodoro.html">
+           <img class='portfolioimg img-responsive' src="/imgs/pomodoro.PNG" alt="Pomodoro Clock">
+           <div class="carousel-caption">
+             <h3>Pomodoro Clock</h3>
+             <p>Built with HTML, CSS, Bootstrap and Javascript</p>
+           </div>
+         </a>
        </div>
 
        <div class="item container">
-         <img class='portfolioimg img-responsive' src="https://scontent.cdninstagram.com/hphotos-xpf1/t51.2885-15/s480x480/e35/10899184_1094440900627191_1417572849_n.jpg" alt="Project 2">
-         <div class="carousel-caption">
-           <h3>Cat 2</h3>
-           <p>The atmosphere in Chania has a touch of Florence and Venice.</p>
-         </div>
+         <a href="/projects/wikipedia.html">
+           <img class='portfolioimg img-responsive' src="/imgs/wikipedia-search-box.PNG" alt="Wikipedia Search Box">
+           <div class="carousel-caption">
+             <h3>Search Wikipedia</h3>
+             <p>Built with HTML, CSS, Bootstrap, Jquery</p>
+           </div>
+         </a>
        </div>
 
        <div class="item container">
@@ -176,21 +180,17 @@
         <h2 class="text-center">Contact Us</h2>
 
         <div class="row">
-          <div class="col-md-2">
+          <div class="col-md-3">
             <button class="btn btn-block btn-default"> <a href="mailto:mohtasimtamjeed@gmail.com" target="_blank">Email Us</a></button>
           </div>
-          <div class="col-md-2">
+          <div class="col-md-3">
             <button class="btn btn-block btn-default"> <a href="https://twitter.com/AyonKhan90" target="_blank">Twitter</a></button>
           </div>
-          <div class="col-md-2">
-            <button class="btn btn-block btn-default"> <a href="https://bd.linkedin.com/in/khanayon" target="_blank">LinkedIn</a></button>
-          </div>
-          <div class="col-md-2">
-            <button class="btn btn-block btn-default"><a href="https://github.com/AyonMKhan" target="_blank">GitHub</a></button>
+          <div class="col-md-3">
+            <button class="btn btn-block btn-default"> <a href="https://www.linkedin.com/in/mohtasimtamjeed" target="_blank">LinkedIn</a></button>
           </div>
           <div class="col-md-3">
-            <button class="btn btn-block btn-default"> <a href="http://www.freecodecamp.com/ayonmkhan" target="_blank">FreeCodeCamp</a></button>
-
+            <button class="btn btn-block btn-default"><a href="https://github.com/AyonMKhan" target="_blank">GitHub</a></button>
           </div>
         </div>
       </div>
