--- a/projects/pomodoro.html
+++ b/projects/pomodoro.html
@@ -5,7 +5,7 @@
     <title>Pomodoro Clock</title>
     <link rel="stylesheet" href="/css/bootstrap.min.css">
     <link rel="stylesheet" href="/css/pomodoro.css">
-    <script type="text/javascript" src="js/pomodoro.js"></script>
+    <script type="text/javascript" src="/js/pomodoro.js"></script>
   </head>
 
   <body>
