added random quote machine, fixes to wikipedia search box

--- a/index.html
+++ b/index.html
@@ -98,17 +98,19 @@
            <img class='portfolioimg img-responsive' src="/imgs/wikipedia-search-box.PNG" alt="Wikipedia Search Box">
            <div class="carousel-caption">
              <h3>Search Wikipedia</h3>
-             <p>Built with HTML, CSS, Bootstrap, Jquery</p>
+             <p>Built with HTML, CSS, Bootstrap, JQuery</p>
            </div>
          </a>
        </div>
 
        <div class="item container">
-         <img class='portfolioimg img-responsive' src="https://scontent.cdninstagram.com/hphotos-xpf1/t51.2885-15/s480x480/e35/10899184_1094440900627191_1417572849_n.jpg" alt="Project 2">
-         <div class="carousel-caption">
-           <h3>Cat 2</h3>
-           <p>The atmosphere in Chania has a touch of Florence and Venice.</p>
-         </div>
+         <a href="/projects/random-quote.PNG">
+           <img class='portfolioimg img-responsive' src="/imgs/random-quote-machine.PNG" alt="Random Quote Machine">
+           <div class="carousel-caption">
+             <h3>Random Quotes</h3>
+             <p>Built with HTML, Bootstrap and JQuery</p>
+           </div>
+         </a>
        </div>
 
        <div class="item container">
