--- a/projects/wikipedia.html
+++ b/projects/wikipedia.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" type="text/css" href="/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="/css/wikipedia.css">
     <script type="text/javascript" src="/js/jquery-2.2.4.min.js"></script>
+    <script type="text/javascript" src="/js/wikipedia.js"></script>
   </head>
 
   <body>
