fixed quote machine http link

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
           <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
             <div class="col-md-12">
               <div class="navbar-header" id="n1">
-                <a class="navbar-brand" href="#">CrazyOnion</a>
+                <a class="navbar-brand" href="https://ayonmkhan.github.io/">Mohtasim Tamjeed</a>
               </div>
               <ul class="nav navbar-nav navbar-right">
                 <li id="n2">
@@ -42,9 +42,9 @@
 
       <div class="jumbotron" id="home">
 
-        <h1>Bankai!</h1>
-        <h2>Web Design</h2>
-        <h3>Stellar Nursery of Cool Websites</h3>
+        <h1>Mohtasim Tamjeed</h1>
+        <h2>Web Development Portfolio</h2>
+        <h3>Judge not, lest ye be judged</h3>
         <p>
           Best design firm in the web.
         </p>
@@ -58,7 +58,8 @@
         <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
         <li data-target="#myCarousel" data-slide-to="1"></li>
         <li data-target="#myCarousel" data-slide-to="2"></li>
-
+        <li data-target="#myCarousel" data-slide-to="3"></li>
+        <li data-target="#myCarousel" data-slide-to="4"></li>
       </ol>
 
       <!-- Wrapper for slides -->
@@ -104,7 +105,7 @@
        </div>
 
        <div class="item container">
-         <a href="/projects/random-quote.PNG">
+         <a href="/projects/random-quote.html">
            <img class='portfolioimg img-responsive' src="/imgs/random-quote-machine.PNG" alt="Random Quote Machine">
            <div class="carousel-caption">
              <h3>Random Quotes</h3>
@@ -114,10 +115,10 @@
        </div>
 
        <div class="item container">
-         <img class='portfolioimg img-responsive' src="https://scontent.cdninstagram.com/hphotos-xpf1/t51.2885-15/s640x640/sh0.08/e35/11917909_779213922189436_1742703322_n.jpg" alt="Project 3">
+         <img class='portfolioimg img-responsive' src="https://scontent.cdninstagram.com/hphotos-xpf1/t51.2885-15/s640x640/sh0.08/e35/11917909_779213922189436_1742703322_n.jpg" alt="Weather Info">
          <div class="carousel-caption">
-           <h3>Cat 3</h3>
-           <p>Beatiful flowers in Kolymbari, Crete.</p>
+           <h3>Weather Info</h3>
+           <p>Built with HTML, CSS and JQuery.</p>
          </div>
        </div>
 
