fixes to skills section of portfolio, especially rows and columns

--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
           Founder of Startups. <a href="http://freecodecamp.com/" target="_blank">Writer of Code.</a> Reader of Books.
           <br><br>
         </p>
-        <h4>Skills:</h4>
+        <h3 class="text-center">Skills:</h3>
         <div class="container">
         <div class="row">
           <div class='col-md-4'><img class="logo img-responsive" src = "/imgs/html5-logo.png" alt="HTML"></div>
