skills section fixes

--- a/index.html
+++ b/index.html
@@ -171,6 +171,8 @@
           <div class='col-md-4'><img class="logo img-responsive" src = "/imgs/html5-logo.png" alt="HTML"></div>
           <div class='col-md-4'><img class="logo img-responsive" src = "/imgs/css3-logo.png" alt="CSS 3"></div>
           <div class='col-md-4'><img class="logo img-responsive" src = "/imgs/js-logo.png" alt="Javascript"></div>
+        </div>
+        <div class="row">
           <div class='col-md-4'><img class="logo img-responsive" src = "/imgs/bootstrap-logo.PNG" alt="Twitter Bootstrap"></div>
           <div class='col-md-4'><img class="logo img-responsive" src = "/imgs/jquery-logo.png" alt="JQuery"></div>
           <div class='col-md-4'><img class="logo img-responsive" src = "/imgs/github-logo.png" alt="Github"></div>
