added navbar to several projects

--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
         <h1>Mohtasim Tamjeed</h1>
         <h2>Web Development Portfolio</h2>
         <h3>Judge not, lest ye be judged</h3>
-        <p>
+        <!--<p>
           Best design firm in the web.
-        </p>
+        </p>-->
       </div>
 
       <div class="row" id="portfolio">
@@ -114,7 +114,7 @@
          </a>
        </div>
 
-       <div class="item container">
+       <!--<div class="item container">
          <img class='portfolioimg img-responsive' src="https://scontent.cdninstagram.com/hphotos-xpf1/t51.2885-15/s640x640/sh0.08/e35/11917909_779213922189436_1742703322_n.jpg" alt="Weather Info">
          <div class="carousel-caption">
            <h3>Weather Info</h3>
@@ -136,7 +136,7 @@
            <h3>Cat 2</h3>
            <p>The atmosphere in Chania has a touch of Florence and Venice.</p>
          </div>
-       </div>
+       </div>-->
 
 
       </div>
@@ -157,15 +157,15 @@
 
       <div class="jumbotron" id="aboutus">
 
-        <h2>MT</h2>
+        <!--<h2>MT</h2>
         <h4>Favourite Quote:</h4>
         <p>
           “You are not your job, you're not how much money you have in the bank. You are not the car you drive. You're not the contents of your wallet. You are not your fucking khakis. You are all singing, all dancing crap of the world.”
           <br><br>
           Founder of Startups. <a href="http://freecodecamp.com/" target="_blank">Writer of Code.</a> Reader of Books.
           <br><br>
-        </p>
-        <h3 class="text-center">Skills:</h3>
+        </p>-->
+        <h2 class="text-center">Skills:</h2>
         <div class="container">
         <div class="row">
           <div class='col-md-4'><img class="logo img-responsive" src = "/imgs/html5-logo.png" alt="HTML"></div>
