navbars to simon game and wikipedia search box

--- a/projects/simon.html
+++ b/projects/simon.html
@@ -3,10 +3,31 @@
   <head>
     <meta charset="utf-8">
     <title>Simon Game</title>
-    <link rel="stylesheet" type="text/css" href="../css/simon.css">
+    <link rel="stylesheet" type="text/css" href="/css/bootstrap.min.js">
+    <link rel="stylesheet" type="text/css" href="/css/simon.css">
   </head>
 
   <body>
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12">
+          <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+            <div class="col-md-12">
+              <div class="navbar-header" id="n1">
+                <a class="navbar-brand" href="https://ayonmkhan.github.io/">Home</a>
+              </div>
+              <ul class="nav navbar-nav navbar-right">
+                <li id="n2">
+                  <a href="/projects/js-calculator.html">Javascript Calculator</a>
+                </li>
+
+              </ul>
+            </div>
+          </nav>
+        </div>
+      </div>
+
+
     <div class="container">
       <div class="box">
         <span class="cbutton" id="left-top"></span>
