--- a/projects/wikipedia.html
+++ b/projects/wikipedia.html
@@ -12,6 +12,27 @@
 
   <body>
     <div class="container">
+      <div class="row">
+        <div class="col-md-12">
+          <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+            <div class="col-md-12">
+              <div class="navbar-header" id="n1">
+                <a class="navbar-brand" href="https://ayonmkhan.github.io/">Home</a>
+              </div>
+              <ul class="nav navbar-nav navbar-right">
+                <li id="n2">
+                  <a href="/projects/pomodoro.html">Pomodoro Clock</a>
+                </li>
+                <li id="n3">
+                  <a href="/projects/random-quote.html">Random Quote Generator</a>
+                </li>
+              </ul>
+            </div>
+          </nav>
+        </div>
+      </div>
+
+    <div class="container">
     <div class="wikibox" id="searchdiv">
       <div>
       <form class="searchform">
