--- a/projects/pomodoro.html
+++ b/projects/pomodoro.html
@@ -10,6 +10,27 @@
 
   <body>
     <div class="container">
+      <div class="row">
+        <div class="col-md-12">
+          <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+            <div class="col-md-12">
+              <div class="navbar-header" id="n1">
+                <a class="navbar-brand" href="https://ayonmkhan.github.io/">Home</a>
+              </div>
+              <ul class="nav navbar-nav navbar-right">
+                <li id="n2">
+                  <a href="/projects/js-calculator.html">Javascript Calculator</a>
+                </li>
+                <li id="n3">
+                  <a href="/projects/wikipedia.html">Search Wikipedia</a>
+                </li>
+              </ul>
+            </div>
+          </nav>
+        </div>
+      </div>
+
+    <div class="container">
 
       <h1 class="text-center">Ultimate Pomodoro Machine</h1>
 
