--- a/projects/random-quote.html
+++ b/projects/random-quote.html
@@ -9,6 +9,28 @@
 </head>
 
 <body>
+
+  <div class="container">
+    <div class="row">
+      <div class="col-md-12">
+        <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+          <div class="col-md-12">
+            <div class="navbar-header" id="n1">
+              <a class="navbar-brand" href="https://ayonmkhan.github.io/">Home</a>
+            </div>
+            <ul class="nav navbar-nav navbar-right">
+              <li id="n2">
+                <a href="/projects/wikipedia.html">Search Wikipedia</a>
+              </li>
+              <!--<li id="n3">
+                <a href="/projects/random-quote.html">Random Quote Generator</a>
+              </li>-->
+            </ul>
+          </div>
+        </nav>
+      </div>
+    </div>
+
   <h1 class="text-danger text-center">Random Quote Machine</h1>
 
   <div class="jumbotron">
