--- a/projects/simon.html
+++ b/projects/simon.html
@@ -5,14 +5,13 @@
     <title>Simon Game</title>
 
     <link rel="stylesheet" type="text/css" href="/css/simon.css">
-    <link rel="stylesheet" type="text/css" href="/css/bootstrap.min.js">
   </head>
 
   <body>
     <div class="container">
       <div class="row">
         <div class="col-md-12">
-          <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+          <nav class="navbar navbar-inverse" role="navigation">
             <div class="col-md-12">
               <div class="navbar-header" id="n1">
                 <a class="navbar-brand" href="https://ayonmkhan.github.io/">Home</a>
