--- a/projects/wikipedia.html
+++ b/projects/wikipedia.html
@@ -14,7 +14,7 @@
     <div class="container">
       <div class="row">
         <div class="col-md-12">
-          <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+          <nav class="navbar navbar-inverse" role="navigation">
             <div class="col-md-12">
               <div class="navbar-header" id="n1">
                 <a class="navbar-brand" href="https://ayonmkhan.github.io/">Home</a>
