--- a/projects/js-calculator.html
+++ b/projects/js-calculator.html
@@ -31,29 +31,29 @@
         </div>
       </div>
 
-    <div class="container">
-    <div class="jumbotron" id='dispdiv'>
+    <div class="calccontainer">
+      <div class="jumbotron" id='dispdiv'>
 
-    </div>
+      </div>
 
-    <button class="btn btn-default" id='one'>1</button>
-    <button class="btn btn-default" id='two'>2</button>
-    <button class="btn btn-default" id='three'>3</button>
-    <button class="btn btn-default" id='plus'>&#43</button>
-    <button class="btn btn-default" id='four'>4</button>
-    <button class="btn btn-default" id='five'>5</button>
-    <button class="btn btn-default" id='six'>6</button>
-    <button class="btn btn-default" id='minus'>&#45</button>
-    <button class="btn btn-default" id='seven'>7</button>
-    <button class="btn btn-default" id='eight'>8</button>
-    <button class="btn btn-default" id='nine'>9</button>
-    <button class="btn btn-default" id='multiply'>&times</button>
-    <button class="btn btn-default" id='zero'>0</button>
-    <button class="btn btn-default" id='dot'>.</button>
-    <button class="btn btn-default" id='divide'>&divide</button>
-    <button class="btn btn-default" id='equals'>=</button>
-    <button class="btn btn-default" id='clearall'>CE</button>
-    <button class="btn btn-default" id='clearlast'>&larr;</button>
+      <button class="btn btn-default" id='one'>1</button>
+      <button class="btn btn-default" id='two'>2</button>
+      <button class="btn btn-default" id='three'>3</button>
+      <button class="btn btn-default" id='plus'>&#43</button>
+      <button class="btn btn-default" id='four'>4</button>
+      <button class="btn btn-default" id='five'>5</button>
+      <button class="btn btn-default" id='six'>6</button>
+      <button class="btn btn-default" id='minus'>&#45</button>
+      <button class="btn btn-default" id='seven'>7</button>
+      <button class="btn btn-default" id='eight'>8</button>
+      <button class="btn btn-default" id='nine'>9</button>
+      <button class="btn btn-default" id='multiply'>&times</button>
+      <button class="btn btn-default" id='zero'>0</button>
+      <button class="btn btn-default" id='dot'>.</button>
+      <button class="btn btn-default" id='divide'>&divide</button>
+      <button class="btn btn-default" id='equals'>=</button>
+      <button class="btn btn-default" id='clearall'>CE</button>
+      <button class="btn btn-default" id='clearlast'>&larr;</button>
     </div>
 
     <script type="text/javascript" src="/js/js-calculator.js"></script>
