added devicons and some more awesome stuff

--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
 
     <link rel="stylesheet" type="text/css" href="/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="/css/animate.min.css">
+    <link rel="stylesheet" type="text/css" href="/css/devicon.min.css">
     <link rel="stylesheet" type="text/css" href="/css/index.css">
+
 
   </head>
   <body>
@@ -23,13 +25,13 @@
                   <a href="#padding">Home</a>
                 </li>
                 <li id="n3">
-                  <a href="#portfolio">Portfolio</a>
+                  <a href="#portfolio">Projects</a>
                 </li>
                 <li id="n4">
-                  <a href="#aboutus">About Us</a>
+                  <a href="#aboutus">Skills</a>
                 </li>
                 <li id="n5">
-                  <a href="#contactus">Contact Us</a>
+                  <a href="#contactus">Contact Me</a>
                 </li>
               </ul>
             </div>
@@ -50,107 +52,107 @@
         </p>-->
       </div>
 
-      <div class="row" id="portfolio">
+      <div class="row jumbotron" id="portfolio">
+        <h2 class="text-center">Projects</h2>
+        <div id="myCarousel" class="carousel slide" data-ride="carousel">
+        <!-- Indicators -->
+        <ol class="carousel-indicators">
+          <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+          <li data-target="#myCarousel" data-slide-to="1"></li>
+          <li data-target="#myCarousel" data-slide-to="2"></li>
+          <li data-target="#myCarousel" data-slide-to="3"></li>
+          <li data-target="#myCarousel" data-slide-to="4"></li>
+        </ol>
 
-      <div id="myCarousel" class="carousel slide" data-ride="carousel">
-      <!-- Indicators -->
-      <ol class="carousel-indicators">
-        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-        <li data-target="#myCarousel" data-slide-to="1"></li>
-        <li data-target="#myCarousel" data-slide-to="2"></li>
-        <li data-target="#myCarousel" data-slide-to="3"></li>
-        <li data-target="#myCarousel" data-slide-to="4"></li>
-      </ol>
-
-      <!-- Wrapper for slides -->
-      <div class="carousel-inner jumbotron" role="listbox">
-       <div class="item active container">
-         <a href="/projects/simon.html">
-           <img class='portfolioimg img-responsive' src="/imgs/simon-game.PNG" alt="Simon Game Clone">
-           <div class="carousel-caption">
-             <h3>Simon Game Clone</h3>
-             <p>Built with HTML, CSS and Javascript</p>
-           </div>
-        </a>
-       </div>
-
-       <div class="item container">
-         <a href="/projects/js-calculator.html">
-           <img class='portfolioimg img-responsive' src="/imgs/js-calculator.PNG" alt="Javascript Calculator">
-           <div class="carousel-caption">
-             <h3>Javascript Calculator</h3>
-             <p>Built with HTML, CSS and Javascript</p>
-           </div>
-         </a>
-       </div>
-
-       <div class="item container">
-         <a href="/projects/pomodoro.html">
-           <img class='portfolioimg img-responsive' src="/imgs/pomodoro.PNG" alt="Pomodoro Clock">
-           <div class="carousel-caption">
-             <h3>Pomodoro Clock</h3>
-             <p>Built with HTML, CSS, Bootstrap and Javascript</p>
-           </div>
-         </a>
-       </div>
-
-       <div class="item container">
-         <a href="/projects/wikipedia.html">
-           <img class='portfolioimg img-responsive' src="/imgs/wikipedia-search-box.PNG" alt="Wikipedia Search Box">
-           <div class="carousel-caption">
-             <h3>Search Wikipedia</h3>
-             <p>Built with HTML, CSS, Bootstrap, JQuery</p>
-           </div>
-         </a>
-       </div>
-
-       <div class="item container">
-         <a href="/projects/random-quote.html">
-           <img class='portfolioimg img-responsive' src="/imgs/random-quote-machine.PNG" alt="Random Quote Machine">
-           <div class="carousel-caption">
-             <h3>Random Quotes</h3>
-             <p>Built with HTML, Bootstrap and JQuery</p>
-           </div>
-         </a>
-       </div>
-
-       <!--<div class="item container">
-         <img class='portfolioimg img-responsive' src="https://scontent.cdninstagram.com/hphotos-xpf1/t51.2885-15/s640x640/sh0.08/e35/11917909_779213922189436_1742703322_n.jpg" alt="Weather Info">
-         <div class="carousel-caption">
-           <h3>Weather Info</h3>
-           <p>Built with HTML, CSS and JQuery.</p>
+        <!-- Wrapper for slides -->
+        <div class="carousel-inner" role="listbox">
+         <div class="item active container">
+           <a href="/projects/simon.html">
+             <img class='portfolioimg img-responsive' src="/imgs/simon-game.PNG" alt="Simon Game Clone">
+             <div class="carousel-caption">
+               <h3>Simon Game Clone</h3>
+               <p>Built with HTML, CSS and Javascript</p>
+             </div>
+          </a>
          </div>
-       </div>
 
-       <div class="item container">
-         <img class='portfolioimg img-responsive' src="https://scontent.cdninstagram.com/hphotos-xpf1/t51.2885-15/s480x480/e35/10899184_1094440900627191_1417572849_n.jpg" alt="Project 2">
-         <div class="carousel-caption">
-           <h3>Cat 2</h3>
-           <p>The atmosphere in Chania has a touch of Florence and Venice.</p>
+         <div class="item container">
+           <a href="/projects/js-calculator.html">
+             <img class='portfolioimg img-responsive' src="/imgs/js-calculator.PNG" alt="Javascript Calculator">
+             <div class="carousel-caption">
+               <h3>Javascript Calculator</h3>
+               <p>Built with HTML, CSS and Javascript</p>
+             </div>
+           </a>
          </div>
-       </div>
 
-       <div class="item container">
-         <img class='portfolioimg img-responsive' src="https://scontent.cdninstagram.com/hphotos-xpf1/t51.2885-15/s480x480/e35/10899184_1094440900627191_1417572849_n.jpg" alt="Project 2">
-         <div class="carousel-caption">
-           <h3>Cat 2</h3>
-           <p>The atmosphere in Chania has a touch of Florence and Venice.</p>
+         <div class="item container">
+           <a href="/projects/pomodoro.html">
+             <img class='portfolioimg img-responsive' src="/imgs/pomodoro.PNG" alt="Pomodoro Clock">
+             <div class="carousel-caption">
+               <h3>Pomodoro Clock</h3>
+               <p>Built with HTML, CSS, Bootstrap and Javascript</p>
+             </div>
+           </a>
          </div>
-       </div>-->
+
+         <div class="item container">
+           <a href="/projects/wikipedia.html">
+             <img class='portfolioimg img-responsive' src="/imgs/wikipedia-search-box.PNG" alt="Wikipedia Search Box">
+             <div class="carousel-caption">
+               <h3>Search Wikipedia</h3>
+               <p>Built with HTML, CSS, Bootstrap, JQuery</p>
+             </div>
+           </a>
+         </div>
+
+         <div class="item container">
+           <a href="/projects/random-quote.html">
+             <img class='portfolioimg img-responsive' src="/imgs/random-quote-machine.PNG" alt="Random Quote Machine">
+             <div class="carousel-caption">
+               <h3>Random Quotes</h3>
+               <p>Built with HTML, Bootstrap and JQuery</p>
+             </div>
+           </a>
+         </div>
+
+         <!--<div class="item container">
+           <img class='portfolioimg img-responsive' src="https://scontent.cdninstagram.com/hphotos-xpf1/t51.2885-15/s640x640/sh0.08/e35/11917909_779213922189436_1742703322_n.jpg" alt="Weather Info">
+           <div class="carousel-caption">
+             <h3>Weather Info</h3>
+             <p>Built with HTML, CSS and JQuery.</p>
+           </div>
+         </div>
+
+         <div class="item container">
+           <img class='portfolioimg img-responsive' src="https://scontent.cdninstagram.com/hphotos-xpf1/t51.2885-15/s480x480/e35/10899184_1094440900627191_1417572849_n.jpg" alt="Project 2">
+           <div class="carousel-caption">
+             <h3>Cat 2</h3>
+             <p>The atmosphere in Chania has a touch of Florence and Venice.</p>
+           </div>
+         </div>
+
+         <div class="item container">
+           <img class='portfolioimg img-responsive' src="https://scontent.cdninstagram.com/hphotos-xpf1/t51.2885-15/s480x480/e35/10899184_1094440900627191_1417572849_n.jpg" alt="Project 2">
+           <div class="carousel-caption">
+             <h3>Cat 2</h3>
+             <p>The atmosphere in Chania has a touch of Florence and Venice.</p>
+           </div>
+         </div>-->
 
 
-      </div>
+        </div>
 
       <!-- Left and right controls -->
-      <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
-        <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-        <span class="sr-only">Previous</span>
-      </a>
-      <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
-        <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-        <span class="sr-only">Next</span>
-      </a>
-    </div>
+        <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+          <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+          <span class="sr-only">Previous</span>
+        </a>
+        <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+          <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+          <span class="sr-only">Next</span>
+        </a>
+      </div>
 
       </div>
 
@@ -168,20 +170,18 @@
         <h2 class="text-center">Skills:</h2>
         <div class="container">
         <div class="row">
-          <div class='col-md-4'><img class="logo img-responsive" src = "/imgs/html5-logo.png" alt="HTML"></div>
-          <div class='col-md-4'><img class="logo img-responsive" src = "/imgs/css3-logo.png" alt="CSS 3"></div>
-          <div class='col-md-4'><img class="logo img-responsive" src = "/imgs/js-logo.png" alt="Javascript"></div>
-        </div>
-        <div class="row">
-          <div class='col-md-4'><img class="logo img-responsive" src = "/imgs/bootstrap-logo.PNG" alt="Twitter Bootstrap"></div>
-          <div class='col-md-4'><img class="logo img-responsive" src = "/imgs/jquery-logo.png" alt="JQuery"></div>
-          <div class='col-md-4'><img class="logo img-responsive" src = "/imgs/github-logo.png" alt="Github"></div>
+          <div class='col-sm-2 text-center'><i class="devicon-html5-plain-wordmark colored"></i></div>
+          <div class='col-sm-2 text-center'><i class="devicon-css3-plain-wordmark colored"></div>
+          <div class='col-sm-2 text-center'><i class="devicon-bootstrap-plain colored"></i></div>
+          <div class='col-sm-2 text-center'><i class="devicon-javascript-plain colored"></i></div>
+          <div class='col-sm-2 text-center'><i class="devicon-jquery-plain-wordmark colored"></i></div>
+          <div class='col-sm-2 text-center'><i class="devicon-github-plain-wordmark colored"></i></div>
         </div>
         </div>
       </div>
 
       <div class="jumbotron" id="contactus">
-        <h2 class="text-center">Contact Us</h2>
+        <h2 class="text-center">Contact Me</h2>
 
         <div class="row">
           <div class="col-md-3">
