small style changes in index.html

--- a/index.html
+++ b/index.html
@@ -159,7 +159,14 @@
 
       <div class="jumbotron" id="aboutus">
 
-        <!--<h2>MT</h2>
+        <!--<h2>About Me</h2>
+        <ul>
+          <li>Car crash survivor</li>
+          <li>River drowning survivor</li>
+          <li>Reader of books</li>
+          <li>Car crash survivor</li>
+          <li>Car crash survivor</li>
+        </ul>
         <h4>Favourite Quote:</h4>
         <p>
           “You are not your job, you're not how much money you have in the bank. You are not the car you drive. You're not the contents of your wallet. You are not your fucking khakis. You are all singing, all dancing crap of the world.”
@@ -185,7 +192,7 @@
 
         <div class="row">
           <div class="col-md-3">
-            <button class="btn btn-block btn-default"> <a href="mailto:mohtasimtamjeed@gmail.com" target="_blank">Email Us</a></button>
+            <button class="btn btn-block btn-default"> <a href="mailto:mohtasimtamjeed@gmail.com" target="_blank">Email Me</a></button>
           </div>
           <div class="col-md-3">
             <button class="btn btn-block btn-default"> <a href="https://twitter.com/AyonKhan90" target="_blank">Twitter</a></button>
