added weather app project

--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
           <li data-target="#myCarousel" data-slide-to="2"></li>
           <li data-target="#myCarousel" data-slide-to="3"></li>
           <li data-target="#myCarousel" data-slide-to="4"></li>
+          <li data-target="#myCarousel" data-slide-to="5"></li>
         </ol>
 
         <!-- Wrapper for slides -->
@@ -74,6 +75,16 @@
                <p>Built with HTML, CSS and Javascript</p>
              </div>
           </a>
+         </div>
+
+         <div class="item container">
+           <a href="/projects/weather-app.html">
+             <img class='portfolioimg img-responsive' src="/imgs/weather-app.PNG" alt="Weather Info">
+             <div class="carousel-caption">
+               <h3>Weather Info</h3>
+               <p>Built with HTML, CSS, Bootstrap, JQuery and DarkSky API.</p>
+             </div>
+           </a>
          </div>
 
          <div class="item container">
@@ -101,7 +112,7 @@
              <img class='portfolioimg img-responsive' src="/imgs/wikipedia-search-box.PNG" alt="Wikipedia Search Box">
              <div class="carousel-caption">
                <h3>Search Wikipedia</h3>
-               <p>Built with HTML, CSS, Bootstrap, JQuery</p>
+               <p>Built with HTML, CSS, Bootstrap, JQuery and Wikipedia API</p>
              </div>
            </a>
          </div>
@@ -117,14 +128,6 @@
          </div>
 
          <!--<div class="item container">
-           <img class='portfolioimg img-responsive' src="https://scontent.cdninstagram.com/hphotos-xpf1/t51.2885-15/s640x640/sh0.08/e35/11917909_779213922189436_1742703322_n.jpg" alt="Weather Info">
-           <div class="carousel-caption">
-             <h3>Weather Info</h3>
-             <p>Built with HTML, CSS and JQuery.</p>
-           </div>
-         </div>
-
-         <div class="item container">
            <img class='portfolioimg img-responsive' src="https://scontent.cdninstagram.com/hphotos-xpf1/t51.2885-15/s480x480/e35/10899184_1094440900627191_1417572849_n.jpg" alt="Project 2">
            <div class="carousel-caption">
              <h3>Cat 2</h3>
