--- a/projects/js-calculator.html
+++ b/projects/js-calculator.html
@@ -20,7 +20,7 @@
               </div>
               <ul class="nav navbar-nav navbar-right">
                 <li id="n2">
-                  <a href="/projects/simon.html">Simon Game</a>
+                  <a href="/projects/weather-app.html">Weather App</a>
                 </li>
                 <li id="n3">
                   <a href="/projects/pomodoro.html">Pomodoro Clock</a>
