--- a/projects/simon.html
+++ b/projects/simon.html
@@ -18,7 +18,7 @@
               </div>
               <ul class="nav navbar-nav navbar-right">
                 <li id="n2">
-                  <a href="/projects/js-calculator.html">Javascript Calculator</a>
+                  <a href="/projects/weather-app.html">Weather App</a>
                 </li>
 
               </ul>
