minor changes to weather app project page footer

--- a/projects/weather-app.html
+++ b/projects/weather-app.html
@@ -45,11 +45,13 @@
         </div>
       </div>
 
-      <footer class="footer">
-        <div class="container">
-          <p class="text-muted text-center"><a href="https://darksky.net/poweredby/">Powered by Dark Sky</a></p>
-        </div>
-      </footer>
+      <div id="footer" class="container">
+          <nav class="navbar navbar-inverse navbar-fixed-bottom">
+              <div class="navbar-inner navbar-content-center">
+                <p class="text-muted text-center credit"><a href="https://darksky.net/poweredby/">Powered by Dark Sky</a></p>
+              </div>
+          </nav>
+      </div>
 
     </body>
 </html>
