--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
           <li data-target="#myCarousel" data-slide-to="3"></li>
           <li data-target="#myCarousel" data-slide-to="4"></li>
           <li data-target="#myCarousel" data-slide-to="5"></li>
+          <li data-target="#myCarousel" data-slide-to="6"></li>
         </ol>
 
         <!-- Wrapper for slides -->
@@ -74,7 +75,17 @@
                <h3>Simon Game Clone</h3>
                <p>Built with HTML, CSS and Javascript</p>
              </div>
-          </a>
+           </a>
+         </div>
+
+         <div class="item container">
+           <a href="/projects/markdown-previewer.html">
+             <img class='portfolioimg img-responsive' src="/imgs/markdown-previewer.PNG" alt="Weather Info">
+             <div class="carousel-caption">
+               <h3>Markdown Previewer</h3>
+               <p>Built with HTML, SCSS and React.</p>
+             </div>
+           </a>
          </div>
 
          <div class="item container">
@@ -126,23 +137,6 @@
              </div>
            </a>
          </div>
-
-         <!--<div class="item container">
-           <img class='portfolioimg img-responsive' src="https://scontent.cdninstagram.com/hphotos-xpf1/t51.2885-15/s480x480/e35/10899184_1094440900627191_1417572849_n.jpg" alt="Project 2">
-           <div class="carousel-caption">
-             <h3>Cat 2</h3>
-             <p>The atmosphere in Chania has a touch of Florence and Venice.</p>
-           </div>
-         </div>
-
-         <div class="item container">
-           <img class='portfolioimg img-responsive' src="https://scontent.cdninstagram.com/hphotos-xpf1/t51.2885-15/s480x480/e35/10899184_1094440900627191_1417572849_n.jpg" alt="Project 2">
-           <div class="carousel-caption">
-             <h3>Cat 2</h3>
-             <p>The atmosphere in Chania has a touch of Florence and Venice.</p>
-           </div>
-         </div>-->
-
 
         </div>
 
