correction of markdown previewer image in homepage

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 
          <div class="item container">
            <a href="/projects/markdown-previewer.html">
-             <img class='portfolioimg img-responsive' src="/imgs/markdown-previewer.PNG" alt="Weather Info">
+             <img class='portfolioimg img-responsive' src="/imgs/Markdown-previewer.PNG" alt="Markdown Previewer">
              <div class="carousel-caption">
                <h3>Markdown Previewer</h3>
                <p>Built with HTML, SCSS and React.</p>
