--- a/projects/markdown-previewer.html
+++ b/projects/markdown-previewer.html
@@ -17,10 +17,10 @@ there must be a page selector menu-button on top of the player table
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <meta name="description" content="">
     <meta name="Mohtasim Tamjeed" content="">
-    <link rel="icon" href="../../favicon.ico">
+    <!--<link rel="icon" href="../../favicon.ico">-->
 
     <title>Markdown Previewer</title>
-    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+    <!--<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">-->
     <link href="/css/markdown-previewer.css" rel="stylesheet">
 
     <script src="/js/react.min.js"></script>
