--- a/projects/markdown-previewer.html
+++ b/projects/markdown-previewer.html
@@ -25,6 +25,7 @@ there must be a page selector menu-button on top of the player table
 
     <script src="/js/react.min.js"></script>
     <script src="/js/react-dom.min.js"></script>
+    <script src="/js/marked.min.js"></script>
     <script src="/js/markdown-previewer.js"></script>
   </head>
 
