--- a/projects/markdown-previewer.html
+++ b/projects/markdown-previewer.html
@@ -22,7 +22,7 @@ there must be a page selector menu-button on top of the player table
     <title>Markdown Previewer</title>
     <!--<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">-->
     <link href="/css/markdown-previewer.css" rel="stylesheet">
-
+	<script src="/js/babel-6.23.1.min.js"></script>
     <script src="/js/react.min.js"></script>
     <script src="/js/react-dom.min.js"></script>
     <script src="/js/marked.min.js"></script>
