revision to markdown preview js file

--- a/projects/markdown-previewer.html
+++ b/projects/markdown-previewer.html
@@ -22,11 +22,11 @@ there must be a page selector menu-button on top of the player table
     <title>Markdown Previewer</title>
     <!--<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">-->
     <link href="/css/markdown-previewer.css" rel="stylesheet">
-	<script src="/js/babel-6.23.1.min.js"></script>
+	<!--<script src="/js/babel-6.23.1.min.js"></script>-->
     <script src="/js/react.min.js"></script>
     <script src="/js/react-dom.min.js"></script>
     <script src="/js/marked.min.js"></script>
-    <script type="text/babel" src="/js/markdown-previewer.jsx"></script>
+    <script src="/js/markdown-previewer2.js"></script>
   </head>
 
   <body>
