--- a/projects/markdown-previewer.html
+++ b/projects/markdown-previewer.html
@@ -1,12 +1,3 @@
-
-<!--User stories
-There must be a table displaying player profiles on the left side of the page
-There must be a search form for searching players on the right side
-there must be a page selector menu-button on top of the player table
--->
-
-
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -22,11 +13,12 @@ there must be a page selector menu-button on top of the player table
     <title>Markdown Previewer</title>
     <!--<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">-->
     <link href="/css/markdown-previewer.css" rel="stylesheet">
+    
     <script src="/js/react.min.js"></script>
     <script src="/js/react-dom.min.js"></script>
     <script src="/js/marked.min.js"></script>
     <!--<script src="/js/babel-6.23.1.min.js"></script>
-  	<script type="text/babel" data-presets="es2015, react, stage-2" src="/js/markdown-previewer.jsx"></script>-->
+  	<script type="text/babel" data-presets="es2015, react, stage-2" src="/js/markdown-previewer.js"></script>-->
   	<script src="/js/markdown-previewer2.js"></script>  
   </head>
 
