nav to home fixed

--- a/projects/pomodoro.html
+++ b/projects/pomodoro.html
@@ -15,7 +15,7 @@
           <nav class="navbar navbar-inverse" role="navigation">
             <div class="col-md-12">
               <div class="navbar-header" id="n1">
-                <a class="navbar-brand" href="https://ayonmkhan.github.io/">Home</a>
+                <a class="navbar-brand" href="https://mohtasimtamjeed.github.io/">Home</a>
               </div>
               <ul class="nav navbar-nav navbar-right">
                 <li id="n2">
